# ros2_kart_racing

./: .gitignore  README.md  kartland.md  speedpark.md
.github/workflows/: source-build.yml
kart_description/: CMakeLists.txt  package.xml
kart_description/launch/: description.launch.py
kart_description/meshes/: kart_chassis.stl  kart_engine.stl  kart_exhaust.stl  kart_front_bottom_bumper.stl  kart_front_mid_bumper.stl  kart_front_top_bumper.stl  kart_front_top_bumper_frame.stl  kart_front_wheel.stl  kart_front_wheel_base.stl  kart_inner_bumper.stl  kart_left_bumper.stl  kart_rear_bumper.stl  kart_rear_differential_axle.stl  kart_rear_wheel.stl  kart_right_bumper.stl  kart_seat.stl  kart_steering_axle.stl  kart_steering_base.stl  kart_steering_wheel.stl
kart_description/urdf/: kart.urdf.xacro  kart_robot.urdf.xacro
kart_description/urdf/include/: front_wheel.urdf.xacro  gazebo_simulation.urdf.xacro  imu.urdf.xacro  laser.urdf.xacro  rear_wheel.urdf.xacro  stereo_camera.urdf.xacro
kart_description/urdf/include/colours/: roboskel_team_colours.urdf.xacro
kart_simulation/: CMakeLists.txt  package.xml
kart_simulation/config/: controllers.yaml
kart_simulation/launch/: kart_kartland_simulation.launch.py  kart_simulation.launch.py  kart_speedpark_simulation.launch.py
race_steward/: CMakeLists.txt  package.xml
race_steward/include/race_steward/: gate.hpp  race_steward.hpp  racer.hpp  track.hpp
race_steward/src/: gate.cpp  race_steward.cpp  racer.cpp  track.cpp
race_steward_msgs/: CMakeLists.txt  package.xml
race_steward_msgs/msg/: RaceStewardLiveInfo.msg  RaceStewardRacer.msg
race_tracks/: CMakeLists.txt  package.xml
race_tracks/launch/: kartland.launch.py  speedpark.launch.py
race_tracks/meshes/: gate.dae  kartland_barrier.stl  kartland_road.dae  speedpark_barrier.stl  speedpark_barrier_cubed.stl  speedpark_road.dae
race_tracks/urdf/: gate.urdf.xacro  kartland.urdf.xacro  speedpark.urdf.xacro
race_tracks/worlds/: race_track.world  speedpark_track.world
